--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,4 +1,5 @@
 /* styles.css */
+/* styles.css */
 .loading-circle {
     display: none;
     width: 50px;
@@ -17,6 +18,22 @@
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+.loading-success {
+    display: none;
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    background-size: contain;
+}
+.loading-success svg{
+    width: inherit;
+    height: inherit;
 }
 
 #accountDropdownContainer {
